File Name: CHANGES

05/15/2013 FASP 1.3.1:
- Separate interpolation_em.c from interpolation.c.
- Make the truncation step as a stand-alone function.
- Clean up direct interpolation: without allocate a temporary P.
- Flattern nested if and for in interpolation routines.
- Further improve structure and efficiency of interpolation.
- Add a few auxiliary functions. 

05/11/2013 FASP 1.3.0:
- Add a new input parameter AMG_smooth_order.
- Fix matrix-free regression test and add a sample output.
- Clean up AMG setup routines and re-did the code structure.
- Separte C/F splitting phase 1 and phase 2. 
- Add an AMG complexity print-out function for the BSR format.
- Add more comments in coarsening_rs.c
- Flattern nested if and for { } in coarsening routines. 
- Clean up coarsening routines: shorten the code, change several function names, etc.
- Remove interp_type as an input for C/F splitting.
- Remove an old coarsening routine: generate_S_rs.

05/09/2013 FASP 1.2.9:
- When coarsening step not succeed, stop setup instead of quit.
- Change interface to MUMPS a little bit.
- Fix an output memory out-of-bound bug in pvfgmres.
- Modify io.c a little, not important.
- Add error handling in AMG setup in case problems happen.
- Remove error handling for AMG setup in amg.c/famg.c: now in amg_setup.c.
- Change output format slightly.
- Update regression tests.
- Fix memory leakages, definite and possible, reported by valgrind.
- Fix a parameter initialization bug.
- Revise matrix-free iterative solvers.

04/30/2013 FASP 1.2.8:
- Change filename blas_block.c --> blas_bcsr.c.
- Change filename threads_schedule.c --> threads.c.
- Change directory setting for fasp-based packages.
- Update VS08 solution according to the recent changes of faspsolver.
- Start to clean up fasp4blkoil; some functions related are changed.
- Remove unused variables.
- Fix a safe-guard saving bug in BiCGstab.

04/27/2013 FASP 1.2.7:
- Add a multicoloring scheme.
- Fix a typo in the AMG output.