@@ -1,12 +1,13 @@
 File Name: CHANGES
 
-05/15/2013 FASP 1.3.1:
+05/17/2013 FASP 1.3.1:
 - Separate interpolation_em.c from interpolation.c.
 - Make the truncation step as a stand-alone function.
 - Clean up direct interpolation: without allocate a temporary P.
 - Flattern nested if and for in interpolation routines.
 - Further improve structure and efficiency of interpolation.
 - Add a few auxiliary functions. 
+- Test performance of AMG when there are strong positive couplings. 
 
 05/11/2013 FASP 1.3.0:
 - Add a new input parameter AMG_smooth_order.
